--- a/CKK.UI/ProductButton.xaml
+++ b/CKK.UI/ProductButton.xaml
@@ -12,7 +12,7 @@
             <RowDefinition Height="175"/>
             <RowDefinition Height="25"/>
         </Grid.RowDefinitions>
-        <Image HorizontalAlignment="Left" Height="150" Margin="25,10,0,0" VerticalAlignment="Top" Width="150" Name="ProdPic" Source="/default.jpg"/>
-        <TextBlock HorizontalAlignment="Center" Grid.Row="1" Text="{Binding Product.Id}" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" Name="ProdName" FontSize="14" FontWeight="Bold"/>
+        <Image HorizontalAlignment="Left" Height="150" Margin="25,10,25,0" VerticalAlignment="Top" Width="150" Name="ProdPic" Source="/default.jpg"/>
+        <TextBlock HorizontalAlignment="Center" Grid.Row="1" Text="{Binding Product.Name}" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" Name="ProdName" FontSize="14" FontWeight="Bold" TextAlignment="Center"/>
     </Grid>
 </UserControl>
