--- a/CKK.Online/Views/Shop/Add.cshtml
+++ b/CKK.Online/Views/Shop/Add.cshtml
@@ -15,3 +15,5 @@
 {
     <button type="submit" class="btn btn-primary">View Cart</button>
 }
+
+<a href="@Url.Action("ShoppingCart" , "Shop")">Back to Store</a>
